--- a/views/account/signup.pug
+++ b/views/account/signup.pug
@@ -15,7 +15,7 @@ block content
           label(for='email',style= "font-size: 17px") Email (will not be publicly displayed)
           input(type='email', name='email', id='email', placeholder='Email', required)
         .field
-          label(for='password',style= "font-size: 17px") Password
+          label(for='password',style= "font-size: 17px") Password (Write it down or save it somewhere safe. You’ll need it to log in again.)
           input(type='password', name='password', id='password', placeholder='Password', minlength="4", required)
         .field
           label(for='confirmPassword',style= "font-size: 17px") Confirm Password 
