--- a/views/account/signup_info.pug
+++ b/views/account/signup_info.pug
@@ -15,7 +15,7 @@ block content
         input#picinput(type='file', accept='image/*', capture='camera', name='picinput')
       .inline.fields(style='padding-top: 10px !important;')
         .six.wide.field
-          label(for='name', style="font-size: 18px") Your nickname
+          label(for='name', style="font-size: 18px") Your nickname:
           input.form-control(type='text', name='name', id='name', value=user.profile.name)
       .six.wide.field
           label(for='location',style="font-size: 18px") What’s your favorite music?
