--- a/views/com.pug
+++ b/views/com.pug
@@ -2,8 +2,8 @@ extends ui_layout
 
 block content
   .ui.text.container(style="margin-top: 2em; margin-bottom: 2em; font-size: 18px")
-    h2(style="text-align: center") Welcome to <em>Me & My Friends</em></h2>
-    p <em>Me & My Friends</em> is a new social media platform designed specifically for young people. We aim to provide a trusted space where you can share important moments and connect with your friends. 
+    h2(style="text-align: center") Welcome to <em>Online Sharing</em></h2>
+    p <em>Online Sharing</em> is a new social media platform designed specifically for young people. We aim to provide a trusted space where you can share important moments and connect with your friends. 
 
       h3 Here is what you can do on the site.  
     ul
@@ -14,7 +14,7 @@ block content
 
 
     h3 No Personal Attacks and Bullying
-    p Zero tolerance on this! <em>Me & My Friends</em> is a place to share our important moments, not to tear each other down. 
+    p Zero tolerance on this! <em>Online Sharing</em> is a place to share our important moments, not to tear each other down. 
 
     h3 No Discrimination
     p Attacking entire classes of people is just like attacking a single person: we'll ban you for it.
