--- a/views/info.pug
+++ b/views/info.pug
@@ -2,23 +2,24 @@ extends ui_layout
 
 block content
   .ui.text.container(style="margin-top: 4em; margin-bottom: 4em;")
-    h1(style="text-align: center;font-size: 20px") 
+    h1(style="text-align: center;font-size: 21px") 
      
-    h3 On the next page, you can start posting. You'll also see posts made by other users. 
+    h3 On the next page, you can start posting. You'll also see posts made by other <em>Online Sharing</em> users. Feel free to "like" and make comments on the posts. 
     
     
-    h3 For your post, think about a memorable event that you experienced with your friends during the day.
+    h3 For your post, think about a memorable event that you experienced today. 
 
 
-    h3 At the top of the next page, you'll see a textbox. Make a post by clicking on the textbox. 
+    h3 At the top of the next page, you'll see a textbox. Make a post by clicking on the textbox. Other users will be able to view and like your posts. 
     
-    h3(style="text-decoration: underline;").
-     Other users will be able to view and like your posts. The average number of likes is 27 on <em>Me & My Friends</em>
 
     h3 After you share a post, click on the Notifications tab to see how many likes your post has received.
+    
+    p
 
+    h3(style="text-decoration: underline; font-size: 22.5px").
+     If you're curious, the average number of likes is 27.
 
-   
    
 
 
