--- a/views/me.pug
+++ b/views/me.pug
@@ -14,7 +14,7 @@ block content
       .ui.fluid.card
         .content
           .description
-          |  No posts to show.
+          |  No posts to show. Create one!
     each val in posts
       include ./partials/userPost
   .computer.only.tablet.only.four.wide.column 
