--- a/views/notification.pug
+++ b/views/notification.pug
@@ -55,7 +55,7 @@ block content
                     //- img.ui.tiny.right.floated.rounded.image(src='/user_post/'+notification.picture)
                     .summary
                       h2.ui.header
-                        |  Your post has received above the average number of likes!
+                        |  Your post has received around the average (27) number of likes!
                 .event
                   .label
                     i.large.like.icon
