--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -11,7 +11,7 @@ block content
               a(href=endSurveyLink, style="text-decoration: underline; color: red;")  HERE
               | .
   .computer.only.tablet.only.eight.wide.column
-    img.ui.fluid.image(src=process.env.SITE_PICTURE,style="height: 500px; object-fit: cover;")
+    img.ui.fluid.image(src=process.env.SITE_PICTURE)
 
   .eight.wide.computer.eight.wide.tablet.sixteen.wide.mobile.column
     .ui.card.fluid(style="padding: 20px; margin-top: 90px; font-size: 18px")
