--- a/views/account/signup.pug
+++ b/views/account/signup.pug
@@ -2,7 +2,7 @@ extends ../ui_layout
 
 block content
   .computer.only.tablet.only.eight.wide.column
-    img.ui.fluid.image(src=process.env.SITE_PICTURE, style="height: 500px; object-fit: cover;")
+    img.ui.fluid.image(src=process.env.SITE_PICTURE)
   .eight.wide.computer.eight.wide.tablet.sixteen.wide.mobile.column
     .ui.card.fluid(style="padding: 20px; margin-top: 90px;font-size: 17px")
       h2.ui.header Sign Up
